fix duplicate key